feat: create signin page

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -10,6 +10,10 @@
     "termsAndConditions": "Termos e Condições",
     "privacyPolicy": "Política de Privacidade",
     "confirm": "Confirmar",
-    "continue": "Continuar"
+    "continue": "Continuar",
+    "signin": "Entrar",
+    "forgotPassword": "Esqueceu sua senha?",
+    "newUserText": "Ainda não possui uma conta? <0>{{signup}}</0>",
+    "existingUserText": "Já possui uma conta? <0>{{signin}}</0>"
   }
 }
