feat: create signup page

--- a/src/i18n/locales/pt-BR.json
+++ b/src/i18n/locales/pt-BR.json
@@ -18,6 +18,9 @@
     "yourName": "Seu nome",
     "profile": "Perfil",
     "name": "Nome",
-    "role": "Atribuição"
+    "role": "Atribuição",
+    "passwordMatchMessage": "As senhas devem ser iguais",
+    "requiredMessage": "Este campo é obrigatório",
+    "emailInUse": "Endereço de email já está sendo utilizado"
   }
 }
